# TheStoryNexusTauriApp

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_REFACTORING_PLAN.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  REACT_ANTIPATTERNS_REMEDIATION.md  README.md  SCENEBEAT_REFACTOR_COMPLETE.md  TYPESCRIPT_STRICT_MIGRATION.md  UI_IMPROVEMENT_PLAN.md  biome.json  conftest.py  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.js  tsconfig.json  unused.txt  unused2.txt  unused3.txt  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
docs/: AGENTS.md  AgentOrchestrator.md  ExampleStory.md  IMAGE_GENERATION_PRD.md  LEXICAL_CLEAN_BREAK_PLAN.md  LEXICAL_EDITOR_CHECKPOINT.md  PLAYWRIGHT_EDITOR_TESTING.md  UI_OVERHAUL_CHECKPOINT.md  infrastructure.md
examples/neon/: .env.example  README.md  main.py  pyproject.toml
examples/postgres/: .env.example  README.md  main.py  pyproject.toml
memori/: __init__.py  __main__.py  _cli.py  _config.py  _exceptions.py  _network.py  _setup.py  _utils.py
plan/: StoryNexus-Memori-Development-Plan.md
plans/: perf-baseline.json  performance-security-tracker.md
scripts/: report-bundle-size.mjs
sidecar/: README.md  __init__.py  memori_bridge.py  requirements.txt
src/: app.tsx  constants.ts  demoStory.md  index.css  main.tsx  systemPrompts.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: e2e-globals.d.ts  editor.spec.ts  local-llm.setup.ts  local-llm.spec.ts  local-llm.ts  run-local-llm.mjs  test_init.py  test_search.py  test_utils.py
(+573 files in other folders)
