[project]
name = "memori-neon-example"
version = "0.1.0"
description = "Memori SDK example with Neon serverless Postgres"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "memori",
    "openai>=2.6.1",
    "SQLAlchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
memori = { path = "../../..", editable = true }
