[project]
name = "memori-postgres-example"
version = "0.1.0"
description = "Memori SDK example with PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "memori>=3.0.0",
    "openai>=2.6.1",
    "SQLAlchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.2.1",
]
